trunk/Archive2/97/68ba49b15ef4b9/output
main.cpp: In function 'int main()':
main.cpp:6:12: error: invalid use of non-static member function
     f.close;
            ^
